# SubcloneSeeker

./: .gitignore  .gitmodules  AUTHORS  Archivable.cc  Archivable.h  COPYING  EventCluster.cc  EventCluster.h  GenomicLocation.h  GenomicRange.h  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  MutationTreeNode.h  README  README.md  RefGenome.cc  RefGenome.h  SNP.cc  SNP.h  SegmentalMutation.cc  SegmentalMutation.h  SomaticEvent.cc  SomaticEvent.h  Subclone.cc  Subclone.h  SubcloneExplore.cc  SubcloneExplore.h  TreeNode.cc  TreeNode.h  aclocal.m4  cluster.cc  config.h.in  configure  configure.ac  main.cc  segtxt2db.cc  treemerge.cc
contrib/: Makefile  Makefile.am  Makefile.in
contrib/UnitTest++/: Makefile
contrib/UnitTest++/docs/.svn/: entries
contrib/UnitTest++/src/.svn/: entries
contrib/UnitTest++/src/Posix/.svn/: entries
contrib/UnitTest++/src/tests/.svn/: entries
doc/: Doxyfile  Doxyfile.in  mainpage.md  mainpage_additional.md
doc/extra/: mainpage_additional.md  mainpage_header.md
doc/html/: _archivable_8cc.html  _archivable_8h.html  _archivable_8h.js  _archivable_8h_source.html  _coexistance_table_8h_source.html  _command.html  _event_cluster_8cc.html  _event_cluster_8h.html  _event_cluster_8h.js  _event_cluster_8h_source.html  _genomic_location_8h.html  _genomic_location_8h_source.html  _genomic_range_8h.html  _genomic_range_8h_source.html  _mutation_tree_node_8h_source.html  _ref_genome_8h.html  _ref_genome_8h_source.html  _s_n_p_8cc.html  _s_n_p_8h.html  _s_n_p_8h_source.html  _segmental_mutation_8cc.html  _segmental_mutation_8h.html  _segmental_mutation_8h_source.html  _somatic_event_8cc.html  _somatic_event_8h.html  _somatic_event_8h.js  _somatic_event_8h_source.html  _subclone_8cc.html  _subclone_8h.html  _subclone_8h.js  _subclone_8h_source.html  _subclone_explore_8h_source.html  _tree_node_8cc.html  _tree_node_8h.html  _tree_node_8h.js  _tree_node_8h_source.html  annotated.html  annotated.js  class_coexistance_table-members.html  class_coexistance_table.html  (+163 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_62.js  all_65.js  all_66.js  all_67.js  all_6f.js  all_7.js  all_70.js  all_72.js  all_73.js  all_74.js  all_76.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5f.js  classes_6.js  classes_63.js  classes_65.js  classes_66.js  classes_6c.js  classes_6d.js  classes_6e.js  (+53 more)
doc/source/: mainpage.md  utils.md
src/: .syntastic_cpp_config  Archivable.cc  Archivable.h  EventCluster.cc  EventCluster.h  GenomicLocation.h  GenomicRange.h  Makefile  Makefile.am  Makefile.in  MutationTreeNode.h  RefGenome.cc  RefGenome.h  SNP.cc  SNP.h  SegmentalMutation.cc  SegmentalMutation.h  SomaticEvent.cc  SomaticEvent.h  Subclone.cc  Subclone.h  TreeNode.cc  TreeNode.h  main.cc  supertree.cc  supertree.h  typedefs.h  vcf2matrix.cc  vcf_parser.cc  vcf_parser.h
test/: Makefile  Makefile.am  Makefile.in  TestClustering.cc  TestClustering.h  TestEventCluster.cc  TestEventCluster.h  TestGenomicLocation.cc  TestGenomicRange.cc  TestGenomicRange.h  TestMain.cc  TestSomaticEvent.cc  TestSomaticEvent.h  TestSubclone.cc  TestSubclone.h  TestTreeNode.cc  TestTreeNode.h  common.h
utils/: .syntastic_cpp_config  CoexistanceTable.cpp  CoexistanceTable.h  Makefile  Makefile.am  Makefile.in  SubcloneExplore.cc  SubcloneExplore.h  SubcloneSeeker.cc  cluster.cc  cluster2db.cc  coexist_matrix.cpp  colocal_matrix.cpp  segtxt2db.cc  treemerge.cc  treemerge_p.cc  treemerge_p.h  treemerge_test.cc  treeprint.cc  vcf2matrix.cc
